www/css/mobile.css
/* ... */
*:not(input) {
  user-select: none;
  -webkit-user-select: none;
}
html {
  -webkit-text-size-adjust: 100%;
  height: 100vh;
}
body {
  height: 100%;
}
html,
body {
  margin: 0;
  padding: 0;
  font-family: system-ui, Meiryo, sans-serif, Arial;
  background: var(--bg-main-color);
  overscroll-behavior: none;
  overflow: hidden;
}
.overlay {
  visibility: visible;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 1;
  background-color: var(--theme-color-glass);
  transition: opacity 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  pointer-events: auto;
}
.overlay.hide {
  opacity: 0;
}
.overlay.dragging {
  transition: none;
}
.overlay.hidden {
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
}
.menu {
  position: fixed;
  width: 224px;
  left: 0;
  top: 0;
  bottom: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  background-color: var(--bg-main-color);
  box-shadow: 0 0 0.2rem 0.2rem var(--theme-color-glass);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  color: var(--text-main-color);
  transform: translate(0, 0);
  overscroll-behavior: none;
  padding-bottom: env(safe-area-inset-bottom, 0);
}
.menu.hidden {
  transform: translate(-224px, 0);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  box-shadow: none;
}
.menu.dragging {
  transition: none;
  overflow: hidden;
}
.menu .logo {
  height: 10rem;
  position: relative;
}
.menu .logo div {
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center bottom;
}
.menu .logo .hidden {
  visibility: hidden;
}
.menu .logo .sfw {
  background-image: url(/icon.jpg);
}
.menu .logo .nsfw {
  background-image: url(/ico.jpg);
  filter: contrast(1.5);
}
.menu .category {
  padding: 0 0.5rem;
  padding-left: max(env(safe-area-inset-left, 0), 0.5rem);
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.75rem;
  background-color: var(--bg-sub-color);
  border-top: 1px dashed var(--line-main-color);
  border-bottom: 1px dashed var(--line-main-color);
}
.menu .item {
  padding: 0.5rem;
  padding-left: max(env(safe-area-inset-left, 0), 0.5rem);
  line-height: 2rem;
  font-size: 0.875rem;
  background-color: var(--bg-main-color);
  display: flex;
}
.menu .item:last-child {
  border-bottom: none;
}
.menu .item.hidden {
  display: none;
}
.menu .defaultPlayer {
  display: flex;
  flex-direction: column;
}
.menu .defaultPlayer select {
  flex-grow: 1;
  border: none;
  outline: 0;
  font-family: inherit;
  color: inherit;
  background-color: inherit;
  height: inherit;
  font-size: inherit;
  margin-left: 1rem;
}
.menu .item.switch {
  justify-content: space-between;
  align-items: center;
}
.menu .item.switch input {
  display: none;
}
.menu .item.switch .slider {
  border-radius: 2.5rem;
  background-color: var(--switch-off-color);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  width: 4.5rem;
  height: 2.5rem;
  position: relative;
  transform: scale(0.5);
  margin: -1rem;
}
.menu .item.switch .slider:before {
  content: "";
  position: absolute;
  top: 0.25rem;
  bottom: 0.25rem;
  left: 0.25rem;
  right: 2.25rem;
  border-radius: 2rem;
  background-color: var(--switch-color);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
}
.menu .item.switch input:disabled:checked ~ .slider {
  background-color: var(--switch-off-color);
}
.menu .item.switch input:disabled ~ .slider {
  background-color: var(--switch-on-color);
}
.menu .item.switch input:checked ~ .slider {
  background-color: var(--switch-on-color);
}
.menu .item.switch input:disabled:checked ~ .slider:before {
  transform: translate(1rem, 0);
}
.menu .item.switch input:disabled ~ .slider:before {
  transform: translate(1rem, 0);
}
.menu .item.switch input:checked ~ .slider:before {
  transform: translate(2rem, 0);
}
.player {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #000;
}
.player.hidden {
  display: none;
}
.player video {
  width: 100%;
  height: 100%;
}

.list {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  position: fixed;
  padding-top: 4.2rem;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.list.dragging {
  overflow: hidden;
}
.list > .pre {
  font-size: 0.75rem;
  white-space: pre-wrap;
  font-family: monospace;
  user-select: text;
  -webkit-user-select: text;
}
.list > .placeholder {
  text-align: center;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  white-space: pre-wrap;
  color: var(--text-weak-color);
  background-color: var(--bg-main-color);
}
.list > .placeholder > .loading,
.list > .placeholder > .loading:before,
.list > .placeholder > .loading:after {
  width: 0.75rem;
  height: 0.75rem;
  border-radius: 0.5rem;
  background-color: var(--bg-main-color);
  animation: dotFlashing 1200ms infinite linear alternate;
}
.list > .placeholder > .loading {
  animation-delay: 600ms;
  position: relative;
}
.list > .placeholder > .loading:before,
.list > .placeholder > .loading:after {
  content: "";
  position: absolute;
}
.list > .placeholder > .loading:before {
  animation-delay: 300ms;
  right: 1.5rem;
}
.list > .placeholder > .loading:after {
  animation-delay: 900ms;
  left: 1.5rem;
}
@keyframes dotFlashing {
  0%,
  50% {
    background-color: var(--bg-main-color);
  }
  100% {
    background-color: var(--theme-color);
  }
}
.list .item {
  font-size: 0.875rem;
  color: var(--text-main-color);
  margin-left: env(safe-area-inset-left, 0);
  margin-right: env(safe-area-inset-right, 0);
}
.list.thin .item {
  margin-right: 0;
}
.list .item:nth-child(odd) {
  background-color: var(--bg-sub-color);
}
.list .item:nth-child(even) {
  background-color: var(--bg-main-color);
}
.list .item:last-child {
  margin-bottom: env(safe-area-inset-bottom, 0);
}
/* ... */

